--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -9,22 +9,6 @@
     border-radius: 5%;
 }
 
-.banner{
-    height: 300px;
-    position: relative;
-}
-
-.banner .bannerImg{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: grayscale(100);
-}
-
-
 h1{
     color: rgb(1, 118, 220);
     text-align: center;
@@ -39,4 +23,29 @@ p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     font-size: 4vh;
+}
+
+/* Mobile responsive styles */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 6vh;
+        padding-top: 1.5vh;
+    }
+    
+    p {
+        font-size: 2.2vh;
+        padding: 1.5vh 5vh;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 5vh;
+        padding-top: 1vh;
+    }
+    
+    p {
+        font-size: 2vh;
+        padding: 1vh 3vh;
+    }
 }
